# autotools-overview

doc/: Autoconf.html  Automake.html  GNU make.html  Gettext.html  Libtool.html  M4.html
example/: .gitignore  Makefile  Makefile.am  Makefile.clean.inc  Makefile.in  README.md.in  common.c  common.h  configure.ac  libcommon.exports  main.c  test-common.c  test-sanity.sh
example/po/: he.po
